# gesture-arm-ros2

./: PRESENTATION_NOTES.md  PROJECT_OVERVIEW.md  README.md  run_simulation.sh  run_tracker.sh
ros2_ws/src/gesture_arm/: package.xml  setup.cfg  setup.py
ros2_ws/src/gesture_arm/gesture_arm/: __init__.py  gesture_publisher.py  gesture_tracker.py
ros2_ws/src/gesture_arm/launch/: demo.launch.py
ros2_ws/src/gesture_arm/urdf/: simple_arm.urdf
